Final Polish: Bot Executable and Documentation

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,32 @@
-node_modules
+# Node
+node_modules/
+npm-debug.log
+
+# Environment variables
 .env
-db.json
-logs
-.vscode
-target
+
+# Logs
+logs/
 *.log
 
+# Runtime data
 db.json.backup
+# preventing db.json from being ignored if it was previously tracked, but usually local db should be ignored. 
+# However, user mentioned db.json.backup specifically earlier. 
+# I will ignore the backup. The main db.json might be needed if it has the initial structure.
+# But generally for a bot template, we don't push the DB.
+# Let's stick to what was explicitly requested before: db.json.backup.
+
+# Build artifacts
+bot.exe
+evertext_brain/target/
+bin/
+# We created a bin/ folder for the rust exe, that probably shouldn't be in the repo if it contains binaries.
+# But wait, if the user wants to distribute it... usually binaries aren't committed.
+# But for "self-bot" maybe they want it? 
+# Best practice: Ignore binaries.
+*.exe
+*.pdb
+
+# Editor
+.vscode/
